[package]
name        = "bevy_parmessagewriter"
version     = "0.1.0"
description = "A simple library for Bevy to write messages in parallel."
authors     = [ "Totobird Creations <https://github.com/Totobird-Creations>" ]
edition     = "2024"

license    = "MIT"
readme     = "README.md"
repository = "https://github.com/Totobird-Creations/bevy_parmessagewriter"
keywords   = [ "bevy", "bevyengine", "game", "message", "parallel" ]
categories = [ "game-development", "game-engines" ]

[lints.rust]
missing_docs = "deny"


[dependencies.bevy_ecs]
version          = "0.17"
default-features = false

[dependencies.bevy_utils]
version          = "0.17"
default-features = false
features         = [ "parallel" ]
